Fixed overflow issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -34,8 +34,8 @@
 	text-align:center;
 }
 .mitre-img{
-	max-width:350px;
-	max-height:300px;
+	max-width:100%;
+	max-height:200px;
 	border-radius:50%;
 }
 #animation{
